task2/terraform/modules/securegroups/http_https_sg/http_https_sg.tf
resource "aws_security_group" "http-https-sg" {
  name        = "http-https"
  description = "SG for http-https"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.cidr_block]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "abotyan-http-https-sg"
    owner       = "abotyan"
    description = "better-terra-abotyan-sg-http-https"
  }
}
